@@ -280,7 +280,8 @@ AM_PATH_SDL($SDL_VERSION,
 
 AC_CHECK_LIB(SDL_mixer, Mix_QuickLoad_RAW,
 	SDL_LIBS="$SDL_LIBS -lSDL_mixer",
-	AC_MSG_ERROR([*** SDL_mixer version 1.2.4 or later not found!])
+	AC_MSG_ERROR([*** SDL_mixer version 1.2.4 or later not found!],
+	$SDL_LIBS)
 )
 
 
